got rid of junk files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <title>NYT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"  charset="UTF-8" >
     <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" >
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" >
+     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" >
     <link href="assets/css/application.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
+    <container>
+      <h1>How Dumb R U lololol?</h1>
+      <div id="viz"></div>
+    </container>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script src="assets/js/application.js"></script>
