--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="assets/css/application.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
-    <container>
-      <h1>How Dumb R U lololol?</h1>
+    <div class="container-narrow">
+    <div class="jumbotron"
+      <div id="outer"><h1>In the age of YouTube, Twitter, and the Microwave oven, some people think our attention spans are getting really, really small. </h1></div>    
       <div id="viz"></div>
-    </container>
+      </div>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script src="assets/js/application.js"></script>
