--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-narrow">
     <div class="jumbotron"
-      <div id="outer"><h1>In the age of YouTube, Twitter, and the Microwave oven, some people think our attention spans are getting really, really small. </h1></div>    
+      <div id="outer"><h1>Some people think that YouTube, Twitter, & the Microwave are making our attention spans rly, rly small. </h1></div>    
       <div id="viz"></div>
       </div>
     </div>
