--- a/assets/js/index.html
+++ b/assets/js/index.html
@@ -29,6 +29,8 @@ body {
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
 
+var numElements;
+
 var margin = {top: 20, right: 20, bottom: 30, left: 50},
     width = 480 - margin.left - margin.right,
     height = 250 - margin.top - margin.bottom;
@@ -51,7 +53,7 @@ var yAxis = d3.svg.axis()
 
 var line = d3.svg.line()
     .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.close); });
+    .y(function(d) { return y((d.close)/120); });
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -60,13 +62,14 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.tsv("data.tsv", function(error, data) {
+  numElements = data.length;
   data.forEach(function(d) {
     d.date = parseDate(d.date);
     d.close = +d.close;
   });
 
   x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain(d3.extent(data, function(d) { return d.close; }));
+  y.domain(d3.extent(data, function(d) { return d.close/120; }));
 
   svg.append("g")
       .attr("class", "x axis")
@@ -88,7 +91,6 @@ d3.tsv("data.tsv", function(error, data) {
       .attr("class", "line")
       .attr("d", line);
 });
-
 </script>
 
 
