--- a/game.html
+++ b/game.html
@@ -11,20 +11,32 @@
   <body>
    <div class="container-narrow">
     <div class="jumbotron">
-      <div id="outer"><h2>Can You Guess When These NYT Articles Were Written Based on Their Headlines?</h2></div> 
-      <div id="game-box" class="container">
-        <div id="viz"></div>
-        <div>
-          <button id="next" onClick="generateRandomTitle()" class="btn btn-large btn-success">NEXT</button>
-          <br>
-          <button id="1980" onClick="checkAnswer(8)" class="btn btn-large btn-success decade-btns">The '80s</button>
-          <button id="1990" onClick="checkAnswer(9)" class="btn btn-large btn-success decade-btns">The '90s</button>
-          <button id="2000" onClick="checkAnswer(0)" class="btn btn-large btn-success decade-btns">The '00s</button>
+      <div id="j-content">
+        <h2>Can You Guess When These NYT Articles Were Written Based on Their Headlines?</h2>
+        <div id="game-box" class="container">
+          <div id="viz"></div>
+          <div>
+            <button id="next" onClick="generateRandomTitle()" class="btn btn-large btn-success">NEXT</button>
+            <br>
+            <button id="1980" onClick="checkAnswer(8)" class="btn btn-large btn-success decade-btns">The '80s</button>
+            <button id="1990" onClick="checkAnswer(9)" class="btn btn-large btn-success decade-btns">The '90s</button>
+            <button id="2000" onClick="checkAnswer(0)" class="btn btn-large btn-success decade-btns">The '00s</button>
+          </div>
         </div>
       </div>
-     </div>
-     <h1>Since 1981, title length of articles has been on the rise.</h1>
-     <iframe scrolling ="no" src="assets/js/index.html"></iframe>
+    </div>
+    <div class="container">
+       <h3>We analyzed 3,000+ New York Times titles to see how they evolved over time. This is what we found. </h3>
+       <p>Title length (average number of words) is increasing.</p>
+       <iframe scrolling ="no" src="assets/js/index.html"></iframe>
+       <p>The Gunning Fog Index (years of education required for comprehension) of titles in decreasing.</p>
+       <iframe scrolling ="no" src="assets/js/index1.html"></iframe>
+       <p>Title length (average number of syllables) is constant.</p>
+       <iframe scrolling ="no" src="assets/js/index2.html"></iframe>
+       <p>Title complexity (ratio of meaning to grammatical unit) is decreasing.</p>
+       <iframe scrolling ="no" src="assets/js/index3.html"></iframe>
+       <h4>With your new knowledge of linguistic characteristics over time, see how well you do in the game up top!</h4>
+    </div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
