--- a/game.html
+++ b/game.html
@@ -8,11 +8,73 @@
      <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" >
     <link href="assets/css/game.css" rel="stylesheet" type="text/css" >
   </head>
-  <body>
-   <div class="container-narrow">
+   <body>
+    <div class="container-narrow">
+    <div class="container">
+       <br>
+       <h1>We analyzed 3,000+ New York Times titles to see how they evolved over time. This is what we found. </h1>
+    </div>
+        <div class="accordion" id="accordion2">
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                  <h2>The number of words is <span id="increase">increasing</span>.</h2>
+              </a>
+            </div>
+            <div id="collapseOne" class="accordion-body collapse">
+              <div class="accordion-inner">
+                  <iframe scrolling ="no" src="assets/js/index.html"></iframe>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                  <h2>But the number of syllables is <span id="neutral">consistent</span>.</h2>
+              </a>
+            </div>
+            <div id="collapseThree" class="accordion-body collapse">
+              <div class="accordion-inner">
+                  <iframe scrolling ="no" src="assets/js/index2.html"></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                  <h2>Difficulty of title comprehension is <span id="decrease">decreasing</span>.</h2>
+              </a>
+            </div>
+            <div id="collapseTwo" class="accordion-body collapse">
+              <div class="accordion-inner">
+                <iframe scrolling ="no" src="assets/js/index1.html"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                <h2>And the density of meaningful words is <span id="decrease">decreasing</span>.</h2>                 
+              </a>
+            </div>
+            <div id="collapseFour" class="accordion-body collapse">
+              <div class="accordion-inner">
+                  <iframe scrolling ="no" src="assets/js/index3.html"></iframe>
+              </div>
+            </div>
+          </div>
+          <br>
+          <br>
+          <h1>Titles are the same size as always. But the language is getting simpler.</h1>
+
     <div class="jumbotron">
       <div id="j-content">
-        <h2>Can You Guess When These NYT Articles Were Written Based on Their Headlines?</h2>
+        <h2 id="neutral">Based on These Trends, Can You Guess When These NYT Headlines Were Written?</h2>
         <div id="game-box" class="container">
           <div id="viz"></div>
           <div>
@@ -25,21 +87,10 @@
         </div>
       </div>
     </div>
-    <div class="container">
-       <h3>We analyzed 3,000+ New York Times titles to see how they evolved over time. This is what we found. </h3>
-       <p>Title length (average number of words) is increasing.</p>
-       <iframe scrolling ="no" src="assets/js/index.html"></iframe>
-       <p>The Gunning Fog Index (years of education required for comprehension) of titles in decreasing.</p>
-       <iframe scrolling ="no" src="assets/js/index1.html"></iframe>
-       <p>Title length (average number of syllables) is constant.</p>
-       <iframe scrolling ="no" src="assets/js/index2.html"></iframe>
-       <p>Title complexity (ratio of meaning to grammatical unit) is decreasing.</p>
-       <iframe scrolling ="no" src="assets/js/index3.html"></iframe>
-       <h4>With your new knowledge of linguistic characteristics over time, see how well you do in the game up top!</h4>
-    </div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/game.js"></script>
   </body>
 </html>
