--- a/game.html
+++ b/game.html
@@ -87,6 +87,7 @@
         </div>
       </div>
     </div>
+    <p>By Judy Mueller and Ananta Pandey</p>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
