colored graph axis, completed accordion inners

--- a/game.html
+++ b/game.html
@@ -23,7 +23,17 @@
             </div>
             <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
-                  <iframe scrolling ="no" src="assets/js/index.html"></iframe>
+                  <span>
+                    <div class="acc-description">
+                      <p>We measured the average number of words in a title for 10 articles every month over a span of 27 years. The graph on the right shows fluctuations from year-to-year, with a clear upward trend.</p>
+                    </div>
+                  </span>
+                  <span class="acc-graph"><iframe scrolling ="no" src="assets/js/index.html"></iframe></span>
+                  <span>
+                    <div class="acc-description">
+                      <p>Does this surprise you? You are not alone. A whopping 48% or the young adults we surveyed thought that titles were actually getting shorter over time.</p>
+                    </div>
+                  </span>
               </div>
             </div>
           </div>
@@ -37,7 +47,12 @@
             </div>
             <div id="collapseThree" class="accordion-body collapse">
               <div class="accordion-inner">
-                  <iframe scrolling ="no" src="assets/js/index2.html"></iframe>
+                <span>
+                    <div class="acc-description">
+                      <p>Even though  the number of words is increasing, the number of syllables has stayed relatively consistent over time. This suggests that we are using shorter words, but more of them.</p>
+                    </div>
+                  </span>
+                  <span class="acc-graph"><iframe scrolling ="no" src="assets/js/index2.html"></iframe></span>
               </div>
             </div>
           </div>
@@ -50,7 +65,12 @@
             </div>
             <div id="collapseTwo" class="accordion-body collapse">
               <div class="accordion-inner">
-                <iframe scrolling ="no" src="assets/js/index1.html"></iframe>
+                <span>
+                    <div class="acc-description">
+                      <p>We measured the Gunning Fog Index (GFI) of our titles sample for every year. Gunning Fog is a measure readability, estimating how many years of American education you would need in order to comprehend a passage of text. As you can see below, you probably need to complete 8th grade before you could understand a title in 1984. But titles in 2006 were accesisible to 5th graders.</p>
+                    </div>
+                  </span>
+                  <span class="acc-graph"><iframe scrolling ="no" src="assets/js/index1.html"></iframe></span>
               </div>
             </div>
           </div>
@@ -64,7 +84,17 @@
             </div>
             <div id="collapseFour" class="accordion-body collapse">
               <div class="accordion-inner">
-                  <iframe scrolling ="no" src="assets/js/index3.html"></iframe>
+                  <span>
+                    <div class="acc-description">
+                      <p>Finally, we measured the lexical density of titles by year and found it was also decreasing. Lexical density is a measure of content per functional and lexical unit. A low lexical density may signify a high ratio of fluff or stop words.</p>
+                    </div>
+                  </span>
+                  <span class="acc-graph"><iframe scrolling ="no" src="assets/js/index3.html"></iframe></span>
+                  <span>
+                    <div class="acc-description">
+                      <p>This will not come as a surprise to most. 78% of respondants thought that news articles were becoming easier to read and less complicated over time. </p>
+                    </div>
+                  </span>
               </div>
             </div>
           </div>
