--- a/assets/js/index1.html
+++ b/assets/js/index1.html
@@ -1,29 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.x.axis path {
-  display: none;
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-</style>
+<head>    
+<link href="../css/graph.css" rel="stylesheet" type="text/css" >
+</head>
 <body>
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
