fixed typos in accordion inners

--- a/game.html
+++ b/game.html
@@ -25,13 +25,13 @@
               <div class="accordion-inner">
                   <span>
                     <div class="acc-description">
-                      <p>We measured the average number of words in a title for 10 articles every month over a span of 27 years. The graph on the right shows fluctuations from year-to-year, with a clear upward trend.</p>
+                      <p>We measured the average number of words in a title for 10 articles every month over a span of 27 years. The graph below shows fluctuations from year-to-year, with a clear upward trend.</p>
                     </div>
                   </span>
                   <span class="acc-graph"><iframe scrolling ="no" src="assets/js/index.html"></iframe></span>
                   <span>
                     <div class="acc-description">
-                      <p>Does this surprise you? You are not alone. A whopping 48% or the young adults we surveyed thought that titles were actually getting shorter over time.</p>
+                      <p>If this surprises you, you are not alone. A whopping 48% or the young adults we surveyed thought that titles were actually getting shorter over time.</p>
                     </div>
                   </span>
               </div>
